--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
@@ -3,3 +3,12 @@ email= Email
 password= Senha
 
 MASCULINO = Masculino
+FEMININO = Feminino
+OUTRO = Outro
+
+PROPIA = Propia
+ALUGADA = Alugada
+
+CASA = Casa
+APARTAMENTO = Apartamento
+INVASAO = Invasão
