--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
@@ -12,3 +12,23 @@ ALUGADA = Alugada
 CASA = Casa
 APARTAMENTO = Apartamento
 INVASAO = Invasão
+
+SEM_ESCOLARIDADE = Sem escolaridade		
+FUNDAMENTAL_COMPLETO = Fundamental completo
+MEDIO_INCOMPLETO = Medio incompleto		
+MEDIO_COMPLETO = Medio completo
+SUPERIOR_INCOMPLETO = Superior incompleto		
+SUPERIOR_COMPLETO = Superior completo
+
+BRANCO = Branco
+NEGRO = Negro
+INDIGINA = Indígena
+PARDO = Pardo
+
+MAE = Mae
+PAI = Pai
+IRMAO = Irmão
+PRIMO = Primo
+AVO_M = Avô
+AVO_F = Avó
+OUTRO = Outro
