--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/messages_pt.properties
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/messages_pt.properties
@@ -1,4 +1,4 @@
-welcome= Seja Bem Vindo!
+welcome= Aldeias infantis SOS Brasil
 invalidForm = O formulário está inválido.
 sessionExpired= Seu acesso foi expirado.
 email.required= Entre com seu endereço de email.
