--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
@@ -34,3 +34,9 @@ AVO_F = Avó
 OUTRO = Outro
 
 RASCUNHO = Rascunho
+EM_EXECUCAO = Em execução
+
+SAUDE = Saúde
+ESPORTE_E_LAZER = Esporte e lazer
+EDUCACAO_E_PROFISSIONALIZACAO = Educação e profissionalização
+CONVIVIO_FAMILIAR = Convívio familiar
