--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
@@ -35,6 +35,8 @@ OUTRO = Outro
 
 RASCUNHO = Rascunho
 EM_EXECUCAO = Em execução
+CONCLUIDO = Concluído
+CANCELADO = Cancelado
 
 SAUDE = Saúde
 ESPORTE_E_LAZER = Esporte e lazer
