--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
@@ -42,3 +42,5 @@ SAUDE = Saúde
 ESPORTE_E_LAZER = Esporte e lazer
 EDUCACAO_E_PROFISSIONALIZACAO = Educação e profissionalização
 CONVIVIO_FAMILIAR = Convívio familiar
+
+FINALIZADO = Finalizado
