--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
@@ -44,3 +44,10 @@ EDUCACAO_E_PROFISSIONALIZACAO = Educação e profissionalização
 CONVIVIO_FAMILIAR = Convívio familiar
 
 FINALIZADO = Finalizado
+
+ADMINISTRATOR = Admininstrador
+ATENDENTE = Atendente
+COLABORADOR_EXTERNO = Colaborador externo		
+OPERADOR_ATENDIMENTOS = Operador Atendimentos		
+CHEFE_ADMINISTRACAO = Chefe da admininstração			
+OPERADOR_ADMINISNTRATIVO = Operador admininstrativo
