--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
@@ -51,3 +51,6 @@ COLABORADOR_EXTERNO = Colaborador externo
 OPERADOR_ATENDIMENTOS = Operador Atendimentos		
 CHEFE_ADMINISTRACAO = Chefe da admininstração			
 OPERADOR_ADMINISNTRATIVO = Operador admininstrativo
+
+TEXTO = Texto
+BOOLEANO = Booleano
