Front end questionario

--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
@@ -54,3 +54,7 @@ OPERADOR_ADMINISNTRATIVO = Operador admininstrativo
 
 TEXTO = Texto
 BOOLEANO = Booleano
+
+AGUARDANDO_APROVACAO = Aguardando aprovação
+APROVADO = Aprovado
+REJEITADO = Rejeitado
