--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
@@ -6,7 +6,7 @@ MASCULINO = Masculino
 FEMININO = Feminino
 OUTRO = Outro
 
-PROPIA = Própia
+PROPIA = Própria
 ALUGADA = Alugada
 
 CASA = Casa
@@ -58,3 +58,6 @@ BOOLEANO = Booleano
 AGUARDANDO_APROVACAO = Aguardando aprovação
 APROVADO = Aprovado
 REJEITADO = Rejeitado
+
+ACEITO = Aceito
+RECUSADO = Recusado
