Some say water has a taste or smell

--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
@@ -37,6 +37,7 @@ RASCUNHO = Rascunho
 EM_EXECUCAO = Em execução
 CONCLUIDO = Concluído
 CANCELADO = Cancelado
+ABERTO = Aberto
 
 SAUDE = Saúde
 ESPORTE_E_LAZER = Esporte e lazer
