--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/i18n/labels_pt.properties
@@ -56,7 +56,7 @@ CHEFE_ADMINISTRACAO = Chefe da admininstração
 OPERADOR_ADMINISNTRATIVO = Operador admininstrativo
 
 TEXTO = Texto
-BOOLEANO = Booleano
+BOOLEANO = Sim/Nao
 
 AGUARDANDO_APROVACAO = Aguardando aprovação
 APROVADO = Aprovado
